--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.6
 
 dev_dependencies:
   flutter_test:
