--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.18.1
   flutter_bloc: ^8.1.3
   get_it: ^7.6.6
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
