--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.6
   flutter_spinkit: ^5.2.0
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
